// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`collection.sync by list-data should sync IRawData 1`] = `
Object {
  "__META__": Object {
    "MODEL_PERSISTED_FIELD": true,
    "collection": undefined,
    "fields": Object {
      "children": Object {
        "defaultValue": undefined,
        "referenceDef": Object {
          "model": "organization.Department",
          "property": undefined,
          "type": 1,
        },
      },
      "code": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "id": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "name": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "parent": Object {
        "defaultValue": undefined,
        "referenceDef": Object {
          "model": "organization.Department",
          "type": 0,
        },
      },
      "parentId": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
    },
    "id": "875fdcddd47e",
    "type": "organization.Department",
  },
  "children": Array [
    Object {
      "id": "bd3e51d15c92",
      "type": "organization.Department",
    },
  ],
  "code": 3043,
  "id": "875fdcddd47e",
  "name": "Bedfordshire",
  "parent": Object {
    "id": "66f58b59c384",
    "type": "organization.Department",
  },
  "parentId": "66f58b59c384",
}
`;

exports[`collection.sync by tree-data should sync data & type 1`] = `
Object {
  "__META__": Object {
    "collection": undefined,
    "fields": Object {
      "children": Object {
        "defaultValue": undefined,
        "referenceDef": Object {
          "model": "organization.Department",
          "property": undefined,
          "type": 1,
        },
      },
      "code": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "id": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "name": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "parent": Object {
        "defaultValue": undefined,
        "referenceDef": Object {
          "model": "organization.Department",
          "type": 0,
        },
      },
      "parentId": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
    },
    "id": "875fdcddd47e",
    "type": "organization.Department",
  },
  "children": Array [
    Object {
      "id": "f66bb6bc1c3c",
      "type": "organization.Department",
    },
    Object {
      "id": "1511422581a9",
      "type": "organization.Department",
    },
    Object {
      "id": "00cf0fa95834",
      "type": "organization.Department",
    },
    Object {
      "id": "bd3e51d15c92",
      "type": "organization.Department",
    },
  ],
  "code": 31517,
  "id": "875fdcddd47e",
  "name": "ADP",
  "parent": Object {
    "id": "66f58b59c384",
    "type": "organization.Department",
  },
  "parentId": "66f58b59c384",
}
`;
